# qm1

./: .gitignore  LICENSE  README.md  TODO.md  mwe.ipynb  mwe_sourcedrain.ipynb  mwe_td.ipynb  pyproject.toml  setup.cfg  stationary_example.ipynb  tutorial_stat.ipynb
example/: mwe_td.ipynb  tutorial_stat.ipynb
qm1/: basics.py  eigensystem.py  grid.py  measurement.py  operators.py  qmsystem.py  wavefunction.py
test/: box.py  ho.py
