[metadata]
name = qm1
version = attr: qm1.VERSION
description = Quantum mechanics in one dimension
long_description = file: README.md, CHANGELOG.md
author = Alexander Kaiser
keywords = quantum mechanics, one-dimensional
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =  matplotlib numpy scipy pandas IPython

[options]
package_dir=src
packages=find:

[options.packages.find]
where=src